--- a/client/src/components/ProfilePage.css
+++ b/client/src/components/ProfilePage.css
@@ -36,6 +36,7 @@
     max-width: 1000px;
     margin: 0 auto;
     padding: 20px;
+    margin-top: 100px;
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
