--- a/client/src/components/ProfilePage.css
+++ b/client/src/components/ProfilePage.css
@@ -33,13 +33,20 @@
   }
   
   .profile-container {
-    max-width: 1000px;
+    max-width: 800px;
     margin: 0 auto;
     padding: 20px;
     margin-top: 100px;
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+     /* Center contents using Flexbox */
+  display: flex;
+  flex-direction: column; /* Align items vertically */
+  align-items: center;    /* Center items horizontally */
+  justify-content: center; /* Center items vertically */
+  text-align: center;
   }
   
   .profile-picture {
@@ -50,6 +57,7 @@
   }
   
   .edit-form {
+    width: 700px;
     margin-bottom: 20px;
   }
   
