--- a/client/src/components/ProfilePage.css
+++ b/client/src/components/ProfilePage.css
@@ -40,6 +40,7 @@
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: white;
 
      /* Center contents using Flexbox */
   display: flex;
